--- a/src/app/auth/create-account/create-account.page.html
+++ b/src/app/auth/create-account/create-account.page.html
@@ -29,6 +29,9 @@
           <ion-input label="Company VAT" labelPlacement="floating" [(ngModel)]="vat"></ion-input>
         </ion-item>
         <ion-item>
+          <ion-input type="number" label="Phone number" labelPlacement="floating" [(ngModel)]="phone"></ion-input>
+        </ion-item>
+        <ion-item>
           <ion-input label="Address" labelPlacement="floating" [(ngModel)]="address"></ion-input>
         </ion-item>
         <ion-item>
