--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,4 +8,5 @@
 
 <ion-content>
 <ion-button routerLink="/create-account">Create account</ion-button>
+<ion-button routerLink="/login">Login</ion-button>
 </ion-content>
