--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -1,8 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/">
-        < </ion-button>
+      <ion-back-button defaultHref="/" text=""></ion-back-button>
     </ion-buttons>
     <ion-title *ngIf="product">{{ product.name }}</ion-title>
   </ion-toolbar>
