--- a/src/app/pages/solution/solution.page.html
+++ b/src/app/pages/solution/solution.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/"> < </ion-button>
+      <ion-button href="/">
+        < </ion-button>
     </ion-buttons>
     <ion-title>
       <img src="../../assets/icon/Logo_DSSI_branco-768x178.png" width="100"> Solution
@@ -17,15 +18,15 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-
-        <ion-item *ngFor="let product of solution.products; let isLast=last" [lines]="isLast ? 'none' : ''" button (click)="goProduct(product.id)">
-          <ion-thumbnail slot="start">
-            <img *ngIf="!product.image" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            <img *ngIf="product.image" src="{{ product.image.original_url }}" />
-          </ion-thumbnail>
-          <ion-label>{{ product.name }}</ion-label>
-        </ion-item>
-
+        <ng-container *ngFor="let product of solution.products; let isLast=last">
+          <ion-item [lines]="isLast ? 'none' : ''" button (click)="goProduct(product.id)" *ngIf="!(user && user.company.country_id == 1 && product.manufacturer_id == 9)">
+            <ion-thumbnail slot="start">
+              <img *ngIf="!product.image" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img *ngIf="product.image" src="{{ product.image.original_url }}" />
+            </ion-thumbnail>
+            <ion-label>{{ product.name }}</ion-label>
+          </ion-item>
+        </ng-container>
       </ion-list>
     </ion-card-content>
   </ion-card>
