--- a/src/app/pages/manufacturer/manufacturer.page.html
+++ b/src/app/pages/manufacturer/manufacturer.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/"> < </ion-button>
+      <ion-back-button text=""></ion-back-button>
     </ion-buttons>
     <ion-title>
       <img src="../../assets/icon/Logo_DSSI_branco-768x178.png" width="100"> Manufacturer
