--- a/src/app/pages/solution/solution.page.html
+++ b/src/app/pages/solution/solution.page.html
@@ -19,7 +19,7 @@
     <ion-card-content>
       <ion-list>
         <ng-container *ngFor="let product of solution.products; let isLast=last">
-          <ion-item [lines]="isLast ? 'none' : ''" button (click)="goProduct(product.id)" *ngIf="!(user && user.company.country_id == 1 && product.manufacturer_id == 9)">
+          <ion-item [lines]="isLast ? 'none' : ''" button (click)="goProduct(product.id)">
             <ion-thumbnail slot="start">
               <img *ngIf="!product.image" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
               <img *ngIf="product.image" src="{{ product.image.original_url }}" />
