--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -51,14 +51,14 @@
     <ion-card-content>
       <p>{{ selection.part_number }}</p>
       <h1 *ngIf="user.company.type == 'partner'">
-        {{ user.company.country_id == 1 ? selection.partner_eur + '€' : '' }}
-        {{ user.company.country_id == 2 ? selection.partner_kz + 'Kz' : '' }}
-        {{ user.company.country_id == 3 ? selection.partner_mt + 'Mt' : '' }}
+        {{ user.company.country_id == 1 && selection.partner_eur > 0 ? selection.partner_eur + '€' : '' }}
+        {{ user.company.country_id == 2 && selection.partner_kz > 0 ? selection.partner_kz + 'Kz' : '' }}
+        {{ user.company.country_id == 3 && selection.partner_mt > 0 ? selection.partner_mt + 'Mt' : '' }}
       </h1>
       <h1 *ngIf="user.company.type == 'end_user'">
-        {{ user.company.country_id == 1 ? selection.pvp_eur + '€' : '' }}
-        {{ user.company.country_id == 2 ? selection.pvp_kz + 'Kz' : '' }}
-        {{ user.company.country_id == 3 ? selection.pvp_mt + 'Mt' : '' }}
+        {{ user.company.country_id == 1 && selection.pvp_eur > 0 ? selection.pvp_eur + '€' : '' }}
+        {{ user.company.country_id == 2 && selection.pvp_kz > 0 ? selection.pvp_kz + 'Kz' : '' }}
+        {{ user.company.country_id == 3 && selection.pvp_mt > 0 ? selection.pvp_mt + 'Mt' : '' }}
       </h1>
       <h2 *ngIf="selection.pvp_eur == 0" class="ion-padding">Para obter preço deste produto, deve pedir cotação.</h2>
       <h2 *ngIf="selection.stock_mz && user.company.country_id == 3"><strong>Stock: </strong>{{ selection.stock_mz.name }}</h2>
